[fix] color contrast

--- a/src/component/VideoCard/_video-card.scss
+++ b/src/component/VideoCard/_video-card.scss
@@ -19,6 +19,10 @@
   .video-title {
     font-size: 1rem;
   }
+
+  .txt-secondary {
+    color: #98a5b0;
+  }
 }
 
 @media screen and (min-width: 48em) {
